Fix menu overlapping.

--- a/packages/person-index/_index.css
+++ b/packages/person-index/_index.css
@@ -15,6 +15,7 @@
   background: rgba(0, 0, 0, 0.3);
   color: #fff;
   padding: 10px;
+  left: 2em;
 }
 
 .sc-persons-index .se-loader {
